feat(layout): create footer, header component, use relative public image path, use light/dark mode logo

--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -4,7 +4,7 @@ title: About
 
 Hey there!
 
-![Mountain](../../public/img.jpeg)
+![Mountain](/img.jpeg)
 
 This Markdown image is automatically converted into a
 [Next.js Image](https://nextjs.org/docs/api-reference/next/image).
