--- a/app/posts/(with-comments)/nextra-components/page.mdx
+++ b/app/posts/(with-comments)/nextra-components/page.mdx
@@ -135,7 +135,7 @@ import {CopyIcon, GitHubIcon, MenuIcon} from 'nextra/icons'
 
 ## `<Bleed>`
 
-<Bleed full>![Mountain](../../../../public/img.jpeg)</Bleed>
+<Bleed full>![Mountain](/img.jpeg)</Bleed>
 
 ## GitHub Alert Syntax
 
