feat(setup): add demo content

--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -2,9 +2,64 @@
 title: About
 ---
 
-Hey there!
+# About This Blog
 
-![Mountain](/img.jpeg)
+A production-ready blog template built on Nextra v4, enhanced with modern features and zero configuration hassle.
 
-This Markdown image is automatically converted into a
-[Next.js Image](https://nextjs.org/docs/api-reference/next/image).
+## Why This Template?
+
+The original Nextra blog theme is powerful, but getting started can be tricky. This template changes that. Clone it, customize your style, and deploy.
+
+## Features
+
+### ⚡ Lightning-Fast Search with Pagefind
+
+Instant, offline-capable full-text search. Static search index generated at build time with zero infrastructure costs.
+
+### 🎨 Tailwind CSS v4
+
+Modern, responsive design out of the box. Easy theming through CSS variables, optimized for both light and dark modes.
+
+### 💬 Giscus Comments
+
+GitHub Discussions-powered comments. No database required, full markdown support, completely open source and free.
+
+### ✨ View Transitions API
+
+Smooth page navigation with next-view-transitions for a native app-like experience.
+
+## Tech Stack
+
+- Nextra v4 with Next.js 15 + React 19 + TypeScript
+- Tailwind CSS v4
+- Pagefind for search
+- Giscus for comments
+- View Transitions API
+
+## Getting Started
+
+```bash
+git clone https://github.com/phucbm/nextra-blog-starter
+cd nextra-blog-starter
+pnpm install
+pnpm dev
+```
+
+Visit `localhost:3000` and start writing in the `/content` directory.
+
+## What's Included
+
+- Pre-configured search with Pagefind
+- Comment system ready with Giscus
+- Responsive design
+- Dark mode support
+- SEO optimized
+- RSS feed
+- Syntax highlighting
+- MDX support
+
+---
+
+**[View on GitHub](https://github.com/phucbm/nextra-blog-starter)** • **[Live Demo](#)**
+
+*Built with ❤️ using Nextra v4*
