--- a/content/posts/hello.mdx
+++ b/content/posts/hello.mdx
@@ -3,6 +3,7 @@ title: Hello, world!
 date: '2025-01-30'
 tags: ['Lorem', 'Donor ipsum']
 description: This is a new post.
+enableComment: true
 ---
 
 Hello, world!
