refactor(setup): custom mdx, header, footer, search

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,23 +1,11 @@
 ---
-title: John
+title: Felix
 ---
 
-# Hey, I'm John 👋
+I'm Felix, a developer who believes good code should be both functional and beautiful. I spend my time building web applications and experimenting with modern frameworks.
 
-I'm a software engineer who builds things for the web. I write about code, share what I learn, and occasionally have opinions about technology.
+I've contributed to several projects ranging from e-commerce platforms to developer tools. Most of my work focuses on creating intuitive user experiences with clean, maintainable code.
 
-## What I Do
+You can explore my projects and writing throughout this site.
 
-I work with modern web technologies—React, TypeScript, Next.js, and whatever else gets the job done. Most of my time is spent turning coffee into code and bugs into features.
-
-## What You'll Find Here
-
-This blog is where I document my journey, share tutorials, and write about problems I've solved (or created). Expect posts about web development, software engineering, and the occasional deep dive into something I find interesting.
-
-## Recent Posts
-
-*Check out my latest articles below.*
-
----
-
-**Want to chat?** Find me on [GitHub](#) • [Twitter](#) • [LinkedIn](#)
+For experimental work and side projects, visit the [playground](/playground).
