refactor(setup): posts

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -9,3 +9,7 @@ I've contributed to several projects ranging from e-commerce platforms to develo
 You can explore my projects and writing throughout this site.
 
 For experimental work and side projects, visit the [playground](/playground).
+
+## Latest posts
+
+<Posts first={5}/>
