refactor(setup): showViewAllButton

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -12,4 +12,4 @@ For experimental work and side projects, visit the [playground](/playground).
 
 ## Latest posts
 
-<Posts first={5}/>
+<Posts first={5} showViewAllButton={true}/>
